<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="horizontal">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_func_test_return_btn"
        android:layout_weight="2"
        android:textSize="25sp"
        android:padding="10dp"
        android:visibility="invisible"
        android:id="@+id/test_return_btn"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_func_test_nopass_btn"
        android:layout_weight="2"
        android:textSize="25sp"
        android:padding="10dp"
        android:id="@+id/test_no_pass_btn"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/main_func_test_pass_btn"
        android:textSize="25sp"
        android:padding="10dp"
        android:id="@+id/test_pass_btn"/>
</LinearLayout>