<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/textview_title" android:id="@+id/main_tv_title"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:id="@+id/bluetooth_file_select_mode_llayout"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_server_btn"
            android:textSize="25sp"
            android:padding="20dp"
            android:text="@string/bluetooth_bt_server"
            android:textAllCaps="false"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ble_server_btn"
            android:textSize="25sp"
            android:padding="20dp"
            android:text="@string/bluetooth_ble_server"
            android:textAllCaps="false"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_client_btn"
            android:textSize="25sp"
            android:padding="20dp"
            android:text="@string/bluetooth_bt_client"
            android:textAllCaps="false"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ble_client_btn"
            android:textSize="25sp"
            android:padding="20dp"
            android:text="@string/bluetooth_ble_client"
            android:textAllCaps="false"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bluetooth_state"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:id="@+id/bluetooth_file_llayout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bluetooth_second_type_ll"
            android:orientation="horizontal">
            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="4"
                android:id="@+id/bluetooth_second_send_type_rg"
                android:layout_gravity="center"
                android:paddingLeft="5dp">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:id="@+id/bluetooth_second_message_rbtn"
                    android:text="@string/bluetooth_file_test_message"
                    android:checked="true"
                    android:textSize="15sp" />
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:id="@+id/bluetooth_second_file_rbtn"
                    android:text="@string/bluetooth_file_test_file"
                    android:checked="false"
                    android:textSize="15sp"/>
            </RadioGroup>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/bluetooth_second_select_file_btn"
                android:layout_weight="2"
                android:text="@string/bluetooth_file_test_select_file"
                android:textAllCaps="false"
                android:layout_marginRight="5dp"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:id="@+id/bluetooth_second_message_et"
                android:textSize="20sp" />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="5dp"
                android:id="@+id/bluetooth_second_send_btn"
                android:text="@string/bluetooth_file_test_send"
                android:textSize="15sp"
                android:textAllCaps="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/bluetooth_second_return_btn"
                android:text="@string/bluetooth_file_test_return"
                android:textSize="15sp"
                android:textAllCaps="false"
                />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/bluetooth_second_scan_btn"
                android:text="@string/bluetooth_file_test_scan"
                android:textSize="15sp"
                android:textAllCaps="false"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bluetooth_second_send_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorTextViewBG"
                android:padding="2dp"
                android:layout_weight="2"
                android:layout_marginBottom="5dp"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorTextViewBG">
                <TextView
                    android:id="@+id/bluetooth_second_state_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
            </ScrollView>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/colorTextViewBG">
                <TextView
                    android:id="@+id/bluetooth_second_message_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/button_status" android:id="@+id/main_btn_status"/>

</LinearLayout>