<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_custom_dialog_tv1"
        android:textSize="20sp"
        android:text="@string/dialog_prompt_string"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_custom_dialog_tv2"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/my_custom_dialog_tv3"
            android:layout_weight="1"
            android:text="@string/dialog_cancel_string"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/dialog_click_item"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/my_custom_dialog_tv4"
            android:layout_weight="1"
            android:text="@string/dialog_confirm_string"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/dialog_click_item"/>

    </LinearLayout>
</LinearLayout>