<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">
    <include layout="@layout/textview_title" android:id="@+id/main_tv_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/serial_port_test_spinner"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/serial_port_test_open"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:id="@+id/serial_port_test_openBtn"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:hint="@string/serial_port_test_open_hint"
            android:id="@+id/serial_port_test_openET"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginRight="5dp"
                android:hint="@string/serial_port_test_send_hint"
                android:id="@+id/serial_port_test_sendET"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/serial_port_test_send"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:id="@+id/serial_port_test_sendBtn"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginRight="5dp"
                android:visibility="invisible"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/serial_port_test_receive"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:id="@+id/serial_port_test_receiveBtn"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTextViewBG"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/serial_port_test_receiveTV"
                android:textSize="20sp"/>
        </ScrollView>
    </LinearLayout>
    <include layout="@layout/button_status" android:id="@+id/main_btn_status"/>

</LinearLayout>